--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-    font-family: montserrat;
+    font-family: montserrat-light;
 
 }
 
@@ -49,7 +49,7 @@ table {
 }
 
 .day-header{
-    background-color: #f3fff3;
+    background-color: #f7dfce;
 }
 
 td,th {
